# BrickGames

./: README.md
src/: Makefile  defines.h
src/brick_game/snake/: snake_back.cc  snake_back.h
src/brick_game/tetris/: back_fsm_tetris.h  back_tetris.c  fsm_tetris.c
src/dvi/: documentation.tex
src/gui/cli/: controller.cc  controller.h  front_console.c  front_console.h
src/gui/desktop/: CMakeLists.txt  controller.cc  controller.h  front.qml
src/tests/: tests_entry.h  tests_snake.cc  unit_test.c
